--- a/index.html
+++ b/index.html
@@ -15,16 +15,13 @@
         <img class="cabecalho-imagem" src="alura.jpg" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">CEMAG</li>
-            <li class="cabecalho-lista-item">Hellen-Lara-Erik-Joao-Victor</li>
+            <li class="cabecalho-lista-item">Hellen-Lara-Joao Lucas-Victor</li>
         </ul>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">CEMAG</h2>
-            <p class="escola-texto-um">Nos alunas do colegio Estadual Manoel Antonio Gomes (cemag) do 2C do 
-                etinerario de exatas, nossa turma esta composta por 30 alunos.
-                  O colegio CEMAG foi fundado no ano de 1960,Manoel Antonio Gomes, no
-                qual o colegio carrega o nome do seu fundador ate hoje.</p>
+            <h2 class="escola-titulo">Plantações de milho</h2>
+            <p class="escola-texto-um"></p>
         </div>
         <img class="escola-imagem" src="cemag.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
