--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alura.jpg" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="plantaçaomilho.webp" alt="plantacao de milho">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">CEMAG</li>
             <li class="cabecalho-lista-item">Hellen-Lara-Joao Lucas-Victor</li>
