--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2 class="escola-titulo">Plantações de milho</h2>
             <p class="escola-texto-um"></p>
         </div>
-        <img class="plantaçao-imagem" src="plantaçaomilho.webp" alt="imagem que representa uma plantaçao de milho">
+        <img class="tipos de semente" src="sementes.jpg" alt="imagem que representa tipos de semente de milho">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem somos?</h2>
