--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="estudante-todos">
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="erik.PNG" alt="foto do erik">
-            <h3 class="estudante-nome">Erik</h3>
-            <a href="https://github.com/bode2708"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <img class="milho-imagem" src="milhodocr.webp" alt="foto milho doce">
+            <h3 class="estudante-nome">milho-doce</h3>
+            <a href="https://https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/sistemas-diferenciais-de-cultivo/milho-doce"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://instagram.com/erickkj_sz"><img class="estudante-icone" src="insta.jpeg" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
