--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="estudante-div">
             <img class="milho-imagem" src="milhodocr.webp" alt="foto milho doce">
             <h3 class="estudante-nome">milho-doce</h3>
-            <a href="https://https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/sistemas-diferenciais-de-cultivo/milho-doce"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/sistemas-diferenciais-de-cultivo/milho-doce"><img class="estudante-icone" src="embrapa.png" alt="icone embrapa"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="hellen.jpg" alt="foto da hellen">
