--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <a href="https://https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/sistemas-diferenciais-de-cultivo/milho-doce"><img class="estudante-icone" src="embrapa.png" alt="icone embrapa"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="hellen.jpg" alt="foto da hellen">
-            <h3 class="estudante-nome">Hellen</h3>
-            <a href="https://github.com/Hellen-Dukievicz"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.instagram.com/hellendukivicz/"><img class="estudante-icone" src="insta.jpeg" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="milhopipoca.jpeg" alt="foto milho pipoca">
+            <h3 class="estudante-nome">milho pipoca</h3>
+            <a href="https://"><img class="estudante-icone" src="github.png" alt="icone github"></a>
+            <a href="https://https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/sistemas-diferenciais-de-cultivo/milho-doce"><img class="estudante-icone" src="github.png" alt="icone github"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="lara.jpg"foto da Lara">
