--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="milhopipoca.jpeg" alt="foto milho pipoca">
             <h3 class="estudante-nome">milho pipoca</h3>
-            <a href="https://https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/sistemas-diferenciais-de-cultivo/milho-doce"><img class="estudante-icone" src="embrapa.png" alt="icone embrapa"></a>
+            <a href="https://https://https://www.embrapa.br/agencia-de-informacao-tecnologica/cultivos/milho/producao/sistemas-diferenciais-de-cultivo/milho-pipoca"><img class="estudante-icone" src="embrapa.png" alt="icone embrapa"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="lara.jpg"foto da Lara">
