--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Plantações de milho</h2>
-            <p class="escola-texto-um"></p>
+            <p class="escola-texto-um">Existem diversos tipos de milho, sendo os principais o milho doce, milho dentado, milho pipoca e </p>
         </div>
         <img class="tipos de semente" src="sementes.jpg" alt="imagem que representa tipos de semente de milho">
     </section>
