--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Plantações de milho</h2>
-            <p class="escola-texto-um">Existem diversos tipos de milho, sendo os principais o milho doce, milho dentado, milho pipoca e </p>
+            <p class="escola-texto-um">Existem diversos tipos de milho, sendo os principais o milho doce, milho dentado, milho pipoca e milho colorido. A plantação de milho gerealmente ocorre em solos bem drenados e com boa fertilidade. O plantio é feito em fileiras espaçadas, e as sementes são geralmente plantadas a uma profundidade de 3 a 5 centímetros, com espaçamento entre as plantas de 20 a 25 centímetros. O milho é uma cultura que requer bastante luz solar e água para se desenvolver adequadamente.</p>
         </div>
         <img class="tipos de semente" src="sementes.jpg" alt="imagem que representa tipos de semente de milho">
     </section>
